--- a/Real word spelling correction.ipynb
+++ b/Real word spelling correction.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Submitted by : Jatin Dholakia (16110066) and Amit Yadav (16110011)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Imports"
    ]
   },
@@ -24,7 +31,8 @@
     "import string\n",
     "import numpy as np\n",
     "from collections import Counter\n",
-    "from nltk.util import ngrams"
+    "from nltk.util import ngrams\n",
+    "import itertools"
    ]
   },
   {
@@ -41,30 +49,20 @@
    "outputs": [],
    "source": [
     "def editDistance(str1, str2, m, n): \n",
-    "    # Create a table to store results of subproblems \n",
     "    dp = [[0 for x in range(n+1)] for x in range(m+1)] \n",
-    "  \n",
-    "    # Fill d[][] in bottom up manner \n",
+    " \n",
     "    for i in range(m+1): \n",
     "        for j in range(n+1): \n",
-    "  \n",
-    "            # If first string is empty, only option is to \n",
-    "            # insert all characters of second string \n",
+    "\n",
     "            if i == 0: \n",
-    "                dp[i][j] = j    # Min. operations = j \n",
-    "  \n",
-    "            # If second string is empty, only option is to \n",
-    "            # remove all characters of second string \n",
+    "                dp[i][j] = j\n",
+    "\n",
     "            elif j == 0: \n",
-    "                dp[i][j] = i    # Min. operations = i \n",
-    "  \n",
-    "            # If last characters are same, ignore last char \n",
-    "            # and recur for remaining string \n",
+    "                dp[i][j] = i\n",
+    "\n",
     "            elif str1[i-1] == str2[j-1]: \n",
     "                dp[i][j] = dp[i-1][j-1] \n",
-    "  \n",
-    "            # If last character are different, consider all \n",
-    "            # possibilities and find minimum \n",
+    "\n",
     "            else: \n",
     "                dp[i][j] =     min(dp[i][j-1] + 1,        # Insert \n",
     "                                   dp[i-1][j] + 1,        # Remove \n",
@@ -92,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "1"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,8 +204,7 @@
     "data = data.lower().strip().split(' ')\n",
     "data = list(filter(None,data))\n",
     "print(\"Number of Tokens = \",len(data))\n",
-    "\n",
-    "WORDS = Counter(data)"
+    "\n"
    ]
   },
   {
@@ -221,8 +218,21 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'across'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "WORDS = Counter(data)\n",
+    "\n",
     "def P(word, N=sum(WORDS.values())): \n",
     "    # Returns probability of a word in vocabulary.\n",
     "    return WORDS[word] / N\n",
@@ -249,42 +259,9 @@
     "    # Chooses closest word according to their frequency. Highest priority given to words with least edit distance.\n",
     "    for i in word_candidates(word):\n",
     "        if(i):\n",
-    "            return max(i,key=P)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def P(word, N=sum(WORDS.values())): \n",
-    "    # Returns probability of a word in vocabulary.\n",
-    "    return WORDS[word] / N\n",
+    "            return max(i,key=P)\n",
     "\n",
-    "\n",
-    "def word_candidates(word):\n",
-    "    # Returns the words that are edit distance 0,1 or 2 away from the given word. Inspired from Peter Norvig\n",
-    "    ed_0 = set()\n",
-    "    ed_1 = set()\n",
-    "    ed_2 = set()\n",
-    "    for w in WORDS:\n",
-    "        ed = editDistance(word,w,len(word),len(w))\n",
-    "        if(ed > 2):\n",
-    "            continue\n",
-    "        elif(ed==0):\n",
-    "            ed_0.add(w)\n",
-    "        elif(ed==1):\n",
-    "            ed_1.add(w)\n",
-    "        elif(ed==2):\n",
-    "            ed_2.add(w)\n",
-    "    return [ed_0,ed_1,ed_2,{word}]\n",
-    "\n",
-    "def closest_word(word):\n",
-    "    # Chooses closest word according to their frequency. Highest priority given to words with least edit distance.\n",
-    "    for i in word_candidates(word):\n",
-    "        if(i):\n",
-    "            return max(i,key=P)"
+    "closest_word('acress')"
    ]
   },
   {
@@ -298,7 +275,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Build without assumption"
+    "### Considering all candidates of all words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'two of the'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bigrams = Counter(ngrams(data,2))\n",
+    "def bigram_prob(sent):\n",
+    "    out = P(sent[0])\n",
+    "    for i in range(1,len(sent)):\n",
+    "        out *= bigrams[(sent[i-1],sent[i])] / WORDS[sent[i-1]]\n",
+    "    return out\n",
+    "\n",
+    "def sent_all_candidates(sent):\n",
+    "    cands = []\n",
+    "    sent = sent.split()\n",
+    "    word_present = [s in WORDS for s in sent]\n",
+    "    if all(word_present):\n",
+    "        for i in sent:\n",
+    "            wc = word_candidates(i)[1]\n",
+    "            wc.add(i)\n",
+    "            cands.append(list(wc))\n",
+    "        cands = list(itertools.product(*cands))\n",
+    "    else:\n",
+    "        idx = word_present.index(0)\n",
+    "        words = word_candidates(sent[idx])[1]\n",
+    "        for i in words:\n",
+    "            l = sent.copy()\n",
+    "            l[idx] = i\n",
+    "            cands.append(l)\n",
+    "    return cands\n",
+    "\n",
+    "def closest_all_sent(sent):\n",
+    "    return ' '.join(max(sent_all_candidates(sent),key=bigram_prob))\n",
+    "\n",
+    "closest_all_sent('two of thew')"
    ]
   },
   {
@@ -310,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -350,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +385,7 @@
        "'i have an apple'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,38 +395,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparison: Word correction v/s Sentence correction\n",
+      "Original word: acress\n",
+      "Corrected word: across\n",
+      "Original sentence:  the acress was singing\n",
+      "Corrected sentence: the actress was singing\n"
+     ]
+    }
+   ],
    "source": [
-    "## 25-40 % of spelling errors are real words kukich 1992"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bigram context based spell check (with incorrect spelling)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Trigram and quadgram context based spell check (with incorrect spelling)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bigram context based spell check (with correct spelling - word exists in dictionary)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Use word embeddings"
+    "print('Comparison: Word correction v/s Sentence correction')\n",
+    "print('Original word:','acress')\n",
+    "print('Corrected word:', closest_word('acress'))\n",
+    "print('Original sentence: ', 'the acress was singing')\n",
+    "print('Corrected sentence:',closest_sent('the acress was singing'))"
    ]
   }
  ],
