Update Real word spelling correction.ipynb

--- a/Real word spelling correction.ipynb
+++ b/Real word spelling correction.ipynb
@@ -148,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "7"
       ]
      },
      "execution_count": 5,
@@ -284,6 +284,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['two', 'of', 'thee']  Probability =  3.434478468140537e-09\n",
+      "['two', 'of', 'then']  Probability =  8.586196170351343e-10\n",
+      "['two', 'of', 'them']  Probability =  3.176892583029997e-07\n",
+      "['two', 'of', 'the']  Probability =  1.0760221040684302e-05\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'two of the'"
@@ -322,6 +332,9 @@
     "    return cands\n",
     "\n",
     "def closest_all_sent(sent):\n",
+    "    for i in sent_all_candidates(sent):\n",
+    "        if(bigram_prob(i)>0):\n",
+    "            print(i,' Probability = ',bigram_prob(i))\n",
     "    return ' '.join(max(sent_all_candidates(sent),key=bigram_prob))\n",
     "\n",
     "closest_all_sent('two of thew')"
@@ -336,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -371,21 +384,33 @@
     "    return cands\n",
     "\n",
     "def closest_sent(sent):\n",
+    "    for i in sent_candidates(sent):\n",
+    "        if(bigram_prob(i)>0):\n",
+    "            print(i,' Probability = ',bigram_prob(i))\n",
     "    return ' '.join(max(sent_candidates(sent),key=bigram_prob))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'have', 'as', 'apply']  Probability =  1.0754504368397698e-10\n",
+      "['i', 'have', 'and', 'apply']  Probability =  2.2639141191043913e-11\n",
+      "['i', 'have', 'an', 'apple']  Probability =  6.081337614802976e-09\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'i have an apple'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,21 +421,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Comparison: Word correction v/s Sentence correction\n",
-      "Original word: acress\n",
-      "Corrected word: across\n",
-      "Original sentence:  the acress was singing\n",
-      "Corrected sentence: the actress was singing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Comparison: Word correction v/s Sentence correction')\n",
     "print('Original word:','acress')\n",
