Update Real word spelling correction.ipynb

--- a/Real word spelling correction.ipynb
+++ b/Real word spelling correction.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Edit Distance Approach (Add non-dp approach)"
+    "### Edit Distance Approach"
    ]
   },
   {
